s10 Vendredi, Edward Twingstan, Mise à jour du fichier (étant donné que je travaillais sur un autre fichier, celui du prof)

--- a/sass/animation/_entete.scss
+++ b/sass/animation/_entete.scss
@@ -12,6 +12,7 @@
         background-color: rgba(251, 168, 13, 0.876);
         color : #fff;
         font-size: 3rem;
+        transform: translateY(-100vh);
        // animation : anim-entete 1s forwards;
          &:nth-of-type(1){
             animation: anim-entete 1s 0s forwards;
