--- a/sass/composantes/_header.scss
+++ b/sass/composantes/_header.scss
@@ -17,28 +17,36 @@
 }
 
 .custom-logo-link, .header__titre, .util {
-  padding: 20px;
+  padding-left: 20px;
 }
 
 
 .header__titre {
-  font-size: clamp(0.5rem, 3vw, 7rem);
+  font-size: clamp(3rem, 4vw, 6rem);
   font-family: $font__titre;
   
 
 }
 
 .header__description {
-  font-size: clamp(0.8rem, 2.5vw, 5.5rem);
+  font-size: clamp(2rem, 2vw, 4rem);
   font-family: $font__main;
 }
 
 .util {
   display: flex;
   flex-direction: column;
+  width: 90%;
+  text-align: center;
   padding: 10px;
   font-size: clamp(0.3rem, 2.5vw, 1rem);
   
+  @media screen and (min-width:700px){
+    width:300px;
+    margin-left : auto;
+    margin-right: 20px;
+  }
+
   &__menu {
     display: flex;
     flex-direction: column;
