--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 /*
-Theme Name: Lab 5 Edward Twingstan
+Theme Name: Exercise 3 Edward Twingstan
 Author: Edward Twingstan
 Author URI: https://github.com/twings07/4W4/tree/lab5
-Description: Lab 5 réaliser dans le cours de 4W4
+Description: Exercise 3 réaliser dans le cours de 4W4
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
@@ -461,6 +461,7 @@ COMPOSANTES
 }
 
 .formation {
+  padding: 10px 15px;
   display: flex;
   flex-direction: column;
 }
@@ -569,24 +570,34 @@ COMPOSANTES
 }
 
 .custom-logo-link, .header__titre, .util {
-  padding: 20px;
+  padding-left: 20px;
 }
 
 .header__titre {
-  font-size: clamp(0.5rem, 3vw, 7rem);
+  font-size: clamp(3rem, 4vw, 6rem);
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 .header__description {
-  font-size: clamp(0.8rem, 2.5vw, 5.5rem);
+  font-size: clamp(2rem, 2vw, 4rem);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .util {
   display: flex;
   flex-direction: column;
+  width: 90%;
+  text-align: center;
   padding: 10px;
   font-size: clamp(0.3rem, 2.5vw, 1rem);
+}
+
+@media screen and (min-width: 700px) {
+  .util {
+    width: 300px;
+    margin-left: auto;
+    margin-right: 20px;
+  }
 }
 
 .util__menu {
@@ -622,25 +633,30 @@ COMPOSANTES
   display: block;
 }
 
-.menu {
+.menu-principal-container {
+  padding: 30px 0 0 0;
+  background-color: #e3b182;
+}
+
+.menu-principal-container .menu {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.menu-item {
+.menu-principal-container .menu-item {
   margin: 0;
   padding: 0;
 }
 
-.menu-item a {
+.menu-principal-container .menu-item a {
   display: block;
   text-decoration: none;
   padding: 4px;
   background-color: #e3b182;
 }
 
-.menu-item a:hover {
+.menu-principal-container .menu-item a:hover {
   background-color: #b82828;
 }
 
@@ -657,6 +673,60 @@ COMPOSANTES
   .home .menu-principal-container {
     display: none;
   }
+}
+
+.menu-accueil-container .menu {
+  display: flex;
+  justify-content: space-around;
+}
+
+.menu-accueil-container .menu .accueil__cours .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=file-badge-bold");
+}
+
+.menu-accueil-container .menu .accueil__prof .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=octoface");
+}
+
+.menu-accueil-container .menu .accueil__aide .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=bug-bold");
+}
+
+.menu-accueil-container .menu .accueil__etudiant .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
+}
+
+.menu-accueil-container .menu .menu-item {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 20%;
+  height: 175px;
+  border: 1px solid #aaa;
+  margin: 0 15px;
+}
+
+.menu-accueil-container .menu .menu-item a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  height: 100%;
+  font-size: 2rem;
+}
+
+.menu-accueil-container .menu .menu-item a .menu-item-description {
+  font-size: 1rem;
+  text-align: center;
+}
+
+.menu-accueil-container .menu .menu-item a .menu-item-icone {
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid #aaa;
+  margin-top: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 /**********************************************************
@@ -807,21 +877,6 @@ Navigation pour la page catégorie.php   bonton de catégorie
   background-color: rgba(255, 255, 255, 0);
 }
 
-.menu-accueil-container .menu {
-  display: flex;
-}
-
-.menu-accueil-container .menu .menu-item {
-  display: flex;
-  flex-direction: column;
-  width: 20%;
-  margin: 0 15px;
-}
-
-.menu-accueil-container .menu .menu-item a {
-  text-decoration: none;
-}
-
 /* ---------------------------------------------------------
 ANIMATION
 --------------------------------------------------------- */
@@ -840,6 +895,7 @@ ANIMATION
   background-color: rgba(251, 168, 13, 0.876);
   color: #fff;
   font-size: 3rem;
+  transform: translateY(-100vh);
 }
 
 .animation__bloc:nth-of-type(1) {
@@ -926,9 +982,6 @@ ANIMATION
 /* ---------------------------------------------------------
 LAYOUT
 --------------------------------------------------------- */
-/*
-theme name: Lab 2 Lemieux Florence
-*/
 .site {
   background-color: #fa4f00;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
