s11 c2, Edward Twingstan, Début de l'exercise 4, modification du template événement

--- a/sass/composantes/_navigation_accueil.scss
+++ b/sass/composantes/_navigation_accueil.scss
@@ -1,25 +1,40 @@
-.menu-accueil-container {
+.menu-accueil-container,.menu-evenement-container {
     // nav
 
     .menu {
         //ul
         display : flex;
         justify-content: space-around;
+        text-decoration: none;
+
+        //MENU DEPARTEMENT TIM
         .accueil__cours .menu-item-icone{
             background-image: url("https://s2.svgbox.net/octicons.svg?ic=file-badge-bold");
         }
         .accueil__prof .menu-item-icone{
-            background-image: url("https://s2.svgbox.net/octicons.svg?ic=octoface");
+            background-image: url("https://s2.svgbox.net/materialui.svg?ic=person");
         }
         .accueil__aide .menu-item-icone{
             background-image: url("https://s2.svgbox.net/octicons.svg?ic=bug-bold");
-            
-
         }
         .accueil__etudiant .menu-item-icone{
             background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
         }
 
+
+        //MENU EVENEMENTS
+        .accueil__journee .menu-item-icone{
+            background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
+        }
+        .accueil__porte__1 .menu-item-icone{
+            background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
+        }
+        .accueil__porte__2 .menu-item-icone{
+            background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
+        }
+        .accueil__projet .menu-item-icone{
+            background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
+        }
         .menu-item {
             //li
             display : flex;
