s12 Vendredi, Edward Twingstan, fin du lab 6 avec la boîte modale fonctionnelle

--- a/sass/composantes/_evenement.scss
+++ b/sass/composantes/_evenement.scss
@@ -1,5 +1,5 @@
 .evenement{
-
+    background-color: rgb(65, 2, 2);
     &__endroit{
 
     }
@@ -10,13 +10,13 @@
 
     }
     &__organisateur{
-
+        background-color: rgb(136, 141, 218);
     }
     &__image{
 
     }
     &__resume{
-
+        background-color: rgb(233, 152, 152);
     }
     
 
