--- a/sass/composantes/_contenu.scss
+++ b/sass/composantes/_contenu.scss
@@ -83,6 +83,9 @@
     color: $color__font-main;
     margin: 5px 0px;
 }
+.cours__invisible{
+    display: none;
+}
 
 .cours__sigle {
     font-size: 1.2rem;
