s13 c1, Edward Twingstan, Lab 8 Animation du menu burger

--- a/sass/composantes/_navigation.scss
+++ b/sass/composantes/_navigation.scss
@@ -1,7 +1,7 @@
 #burger {
     position: absolute;
     transition: transform .3s;
-    transform: rotate(0);
+    //transform: rotate(0);
 }
 
 #chk-burger {
@@ -11,7 +11,7 @@
 
 #chk-burger:checked~#burger {
 
-    transform: rotate(90deg);
+   // transform: rotate(90deg);
 
 }
 
