--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 /*
-Theme Name: Lab 7 Edward Twingstan
+Theme Name: Exercise 4 Edward Twingstan
 Author: Edward Twingstan
 Author URI: https://github.com/twings07/4W4/tree/exer4
-Description: Lab 7 réaliser dans le cours de 4W4
+Description: Exercise 4 réaliser dans le cours de 4W4
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
@@ -618,15 +618,10 @@ COMPOSANTES
 #burger {
   position: absolute;
   transition: transform .3s;
-  transform: rotate(0);
 }
 
 #chk-burger {
   display: none;
-}
-
-#chk-burger:checked ~ #burger {
-  transform: rotate(90deg);
 }
 
 .menu-principal-container {
@@ -1041,6 +1036,49 @@ ANIMATION
   100% {
     transform: scale(1);
   }
+}
+
+.burger {
+  position: relative;
+  width: 2rem;
+  height: 2rem;
+  overflow: hidden;
+  border-radius: 10%;
+  background-color: #ffd000;
+}
+
+.burger__ligne {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(253, 0, 0, 0.712);
+  transition: all 0.5s ease-in-out;
+}
+
+.burger__ligne:nth-of-type(1) {
+  clip-path: polygon(0 0, 100% 0, 100% 20%, 0 20%);
+}
+
+.burger__ligne:nth-of-type(2) {
+  clip-path: polygon(0 40%, 100% 40%, 100% 60%, 0 60%);
+}
+
+.burger__ligne:nth-of-type(3) {
+  clip-path: polygon(0 80%, 100% 80%, 100% 100%, 0 100%);
+}
+
+.burger_X .burger__ligne:nth-of-type(1) {
+  clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+}
+
+.burger_X .burger__ligne:nth-of-type(2) {
+  opacity: 0;
+}
+
+.burger_X .burger__ligne:nth-of-type(3) {
+  clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
 }
 
 /* ---------------------------------------------------------
