s13 c2, Edward Twingstan, organisation de la galerie et modification du carrousel

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,8 @@ COMPOSANTES
 @import "composantes/recherche";
 @import "composantes/evenement";
 @import "composantes/modale";
+@import "composantes/galerie";
+@import "composantes/accueil";
 
 /* ---------------------------------------------------------
 ANIMATION
