--- a/sass/animation/_burger.scss
+++ b/sass/animation/_burger.scss
@@ -25,8 +25,39 @@
         }
         
     }
+    /*
+    &:hover{
+
+        .burger__ligne:nth-of-type(1){
+            clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+        }
+        .burger__ligne:nth-of-type(2){
+            opacity: 0;
+        }
+    
+        .burger__ligne:nth-of-type(3){
+            clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
+        }
+    } 
+    */
+
 }
 
+#chk-burger:checked ~ #burger .burger__ligne{
+    &:nth-of-type(1){
+        clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+    }
+    &:nth-of-type(2){
+        opacity: 0;
+    }
+
+    &:nth-of-type(3){
+        clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
+    }
+}
+
+
+/*
 .burger_X{
     .burger__ligne:nth-of-type(1){
         clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
@@ -39,3 +70,4 @@
         clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
     }
 }
+*/
