--- a/sass/composantes/_modale.scss
+++ b/sass/composantes/_modale.scss
@@ -1,19 +1,21 @@
-.boite__modale{
+.boite__modale, .boite__carrousel{
     position: fixed;
-    width: 50%;
-    height: 50%;
-    top: 25%;
-    left:25%;
     border: 5px solid rgb(182, 0, 0);
     background-color: rgb(48, 72, 210);
     transform: scale(0);
-    transition: all 2s ease-in-out;
+    transition: all 1.5s ease-in-out;
     
     &--ouvrir{
         transform: scale(1);
     }
-    &--fermer{
-        transform: scale(0);
+
+    &--ferme{
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        top: 10px;
+        right: 10px;
+        z-index: 2;
     }
     &__bouton{
         display: flex;
@@ -25,5 +27,65 @@
     &__svg{
         background-color: rgba(47, 46, 46, 0.514);
         border: none;
+    }
+}
+
+.boite__modale{
+    width: 50%;
+    height: 50%;
+    top: 25%;
+    left:25%;
+
+    &__texte
+    {
+        overflow: hidden;
+    }
+    &__bouton{
+        display: flex;
+        justify-content: flex-end;
+        padding: 15px;
+        z-index: 2;
+        
+        
+    }
+}
+
+.boite__carrousel{
+    width: 75%;
+    height: 75%;
+    top: 12.5%;
+    left:12.5%;
+    &__svg{
+        background-color: rgba(47, 46, 46, 0.514);
+        border: none;
+    }
+    &__navigation{
+        position: absolute; 
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        border: 2px solid greenyellow;
+        z-index: 1;
+
+        button{
+            width: 20px;
+            height: 20px;
+            margin: 10px 15px;
+            border-radius: 100%;
+            &:focus{
+                background-color: black;
+            }
+        }
+    }
+    &__img{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        bottom: 0;
+        object-fit:cover;
+
     }
 }
