--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -31,6 +31,9 @@
 .site__main{
     grid-area: main;
     background-color: rgba($color__background-main, .5);
+    padding: 10% 15% 10% 15%;
+    display: flex;
+    flex-direction: column;
 }
 
 .site__footer{
