--- a/style.css
+++ b/style.css
@@ -905,35 +905,111 @@ Navigation pour la page catégorie.php   bonton de catégorie
   background-color: #e99898;
 }
 
-.boite__modale {
+.boite__modale, .boite__carrousel {
   position: fixed;
+  border: 5px solid #b60000;
+  background-color: #3048d2;
+  transform: scale(0);
+  transition: all 1.5s ease-in-out;
+}
+
+.boite__modale--ouvrir, .boite__carrousel--ouvrir {
+  transform: scale(1);
+}
+
+.boite__modale--ferme, .boite__carrousel--ferme {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+}
+
+.boite__modale__bouton, .boite__carrousel__bouton {
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px;
+}
+
+.boite__modale__svg, .boite__carrousel__svg {
+  background-color: rgba(47, 46, 46, 0.514);
+  border: none;
+}
+
+.boite__modale {
   width: 50%;
   height: 50%;
   top: 25%;
   left: 25%;
-  border: 5px solid #b60000;
-  background-color: #3048d2;
-  transform: scale(0);
-  transition: all 2s ease-in-out;
 }
 
-.boite__modale--ouvrir {
-  transform: scale(1);
-}
-
-.boite__modale--fermer {
-  transform: scale(0);
+.boite__modale__texte {
+  overflow: hidden;
 }
 
 .boite__modale__bouton {
   display: flex;
   justify-content: flex-end;
   padding: 15px;
+  z-index: 2;
 }
 
-.boite__modale__svg {
+.boite__carrousel {
+  width: 75%;
+  height: 75%;
+  top: 12.5%;
+  left: 12.5%;
+}
+
+.boite__carrousel__svg {
   background-color: rgba(47, 46, 46, 0.514);
   border: none;
+}
+
+.boite__carrousel__navigation {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  border: 2px solid greenyellow;
+  z-index: 1;
+}
+
+.boite__carrousel__navigation button {
+  width: 20px;
+  height: 20px;
+  margin: 10px 15px;
+  border-radius: 100%;
+}
+
+.boite__carrousel__navigation button:focus {
+  background-color: black;
+}
+
+.boite__carrousel__img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  object-fit: cover;
+}
+
+.galerie {
+  width: 100%;
+}
+
+@media screen and (min-width: 500px) {
+  .galerie {
+    width: 75%;
+  }
+}
+
+.home .site__main {
+  align-items: center;
 }
 
 /* ---------------------------------------------------------
@@ -1045,6 +1121,21 @@ ANIMATION
   overflow: hidden;
   border-radius: 10%;
   background-color: #ffd000;
+  /*
+    &:hover{
+
+        .burger__ligne:nth-of-type(1){
+            clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+        }
+        .burger__ligne:nth-of-type(2){
+            opacity: 0;
+        }
+    
+        .burger__ligne:nth-of-type(3){
+            clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
+        }
+    } 
+    */
 }
 
 .burger__ligne {
@@ -1069,18 +1160,32 @@ ANIMATION
   clip-path: polygon(0 80%, 100% 80%, 100% 100%, 0 100%);
 }
 
-.burger_X .burger__ligne:nth-of-type(1) {
+#chk-burger:checked ~ #burger .burger__ligne:nth-of-type(1) {
   clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
 }
 
-.burger_X .burger__ligne:nth-of-type(2) {
+#chk-burger:checked ~ #burger .burger__ligne:nth-of-type(2) {
   opacity: 0;
 }
 
-.burger_X .burger__ligne:nth-of-type(3) {
+#chk-burger:checked ~ #burger .burger__ligne:nth-of-type(3) {
   clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
 }
 
+/*
+.burger_X{
+    .burger__ligne:nth-of-type(1){
+        clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+    }
+    .burger__ligne:nth-of-type(2){
+        opacity: 0;
+    }
+
+    .burger__ligne:nth-of-type(3){
+        clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
+    }
+}
+*/
 /* ---------------------------------------------------------
 LAYOUT
 --------------------------------------------------------- */
@@ -1117,6 +1222,9 @@ LAYOUT
 .site__main {
   grid-area: main;
   background-color: rgba(248, 201, 171, 0.5);
+  padding: 10% 15% 10% 15%;
+  display: flex;
+  flex-direction: column;
 }
 
 .site__footer {
