Edward Twingstan, 13/05/22, Fin des labs(8, 9, 10)

--- a/sass/composantes/_modale.scss
+++ b/sass/composantes/_modale.scss
@@ -1,7 +1,7 @@
 .boite__modale, .boite__carrousel{
     position: fixed;
-    border: 5px solid rgb(182, 0, 0);
-    background-color: rgb(48, 72, 210);
+    border: 5px solid rgb(170, 1, 1);
+    background-color: rgba(199, 98, 15, 0.966);
     transform: scale(0);
     transition: all 1.5s ease-in-out;
     
@@ -39,6 +39,9 @@
     &__texte
     {
         overflow: hidden;
+        text-align: justify;
+        padding: 15px;
+        
     }
     &__bouton{
         display: flex;
@@ -55,27 +58,48 @@
     height: 75%;
     top: 12.5%;
     left:12.5%;
+    &__ferme{
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.637);
+        border: 1px solid rgb(255, 145, 0);
+        border-radius: 30px;
+        top: 10px;
+        right: 10px;
+        z-index: 1;
+    }
     &__svg{
         background-color: rgba(47, 46, 46, 0.514);
+        text-align: center;
         border: none;
     }
     &__navigation{
-        position: absolute; 
+        position: absolute;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        text-align: center;
         display: flex;
         justify-content: center;
-        width: 100%;
-        bottom: 0;
-        left: 0;
-        border: 2px solid greenyellow;
+        width: 35%;
+        background-color: rgba(0, 0, 0, 0.603);
+        border: 2px solid rgb(255, 145, 0);
+        border-radius: 50px;
         z-index: 1;
 
         button{
+            top:10px;
+            right: 10px;
             width: 20px;
             height: 20px;
             margin: 10px 15px;
+            background-color: rgb(0, 0, 0);
             border-radius: 100%;
+            border: 2px solid rgb(255, 0, 0);
+            z-index: 1;
             &:focus{
-                background-color: black;
+                background-color: rgb(255, 145, 0);
             }
         }
     }
@@ -88,4 +112,5 @@
         object-fit:cover;
 
     }
+    
 }
