--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
 /*
-Theme Name: Exercise 4 Edward Twingstan
+Theme Name: TP2 Edward Twingstan
 Author: Edward Twingstan
 Author URI: https://github.com/twings07/4W4/tree/exer4
-Description: Exercise 4 réaliser dans le cours de 4W4
+Description: TP2 réaliser dans le cours de 4W4
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
