--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 /*
-Theme Name: TP2 Edward Twingstan
+Theme Name: Epreuve Finale Edward Twingstan
 Author: Edward Twingstan
 Author URI: https://github.com/twings07/4W4/tree/exer4
-Description: TP2 réaliser dans le cours de 4W4
+Description: Epreuve finale réaliser dans le cours de 4W4
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
