s16-ef, Edward Twingstan, Les icones pour le menu sont fonctionelle.

--- a/sass/composantes/_navigation_accueil.scss
+++ b/sass/composantes/_navigation_accueil.scss
@@ -37,6 +37,19 @@
         }
 
         //MENU ATELIER
+        .accueil__html .menu-item-icone{
+            background-image: url("https://s2.svgbox.net/files.svg?ic=html");
+        }
+        .accueil__git .menu-item-icone{
+            background-image: url("https://s2.svgbox.net/files.svg?ic=git")
+        }
+        .accueil__react .menu-item-icone{
+            background-image: url("https://s2.svgbox.net/files.svg?ic=reactjs")
+        }
+        .accueil__css .menu-item-icone{
+            background-image: url("https://s2.svgbox.net/files.svg?ic=css") 
+        }
+
         .menu-item {
             //li
             display : flex;
