--- a/style.css
+++ b/style.css
@@ -712,6 +712,22 @@ COMPOSANTES
   background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
 }
 
+.menu-accueil-container .menu .accueil__html .menu-item-icone, .menu-evenement-container .menu .accueil__html .menu-item-icone, .menu-atelier-container .menu .accueil__html .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/files.svg?ic=html");
+}
+
+.menu-accueil-container .menu .accueil__git .menu-item-icone, .menu-evenement-container .menu .accueil__git .menu-item-icone, .menu-atelier-container .menu .accueil__git .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/files.svg?ic=git");
+}
+
+.menu-accueil-container .menu .accueil__react .menu-item-icone, .menu-evenement-container .menu .accueil__react .menu-item-icone, .menu-atelier-container .menu .accueil__react .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/files.svg?ic=reactjs");
+}
+
+.menu-accueil-container .menu .accueil__css .menu-item-icone, .menu-evenement-container .menu .accueil__css .menu-item-icone, .menu-atelier-container .menu .accueil__css .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/files.svg?ic=css");
+}
+
 .menu-accueil-container .menu .menu-item, .menu-evenement-container .menu .menu-item, .menu-atelier-container .menu .menu-item {
   display: flex;
   flex-direction: column;
