s16-ef, Edward Twingstan, Debut css pour ameliorer l'affichage des ateliers offerts

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 /*
 Theme Name: Epreuve Finale Edward Twingstan
 Author: Edward Twingstan
-Author URI: https://github.com/twings07/4W4/tree/exer4
+Author URI: https://github.com/twings07/4W4/tree/epreuve-finale
 Description: Epreuve finale réaliser dans le cours de 4W4
 Version: 1.0.0
 License: GNU General Public License v2 or later
@@ -44,6 +44,7 @@ COMPOSANTES
 @import "composantes/modale";
 @import "composantes/galerie";
 @import "composantes/accueil";
+@import "composantes/atelier";
 
 /* ---------------------------------------------------------
 ANIMATION
